<resources>
    <string name="app_name">GPUTools</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Machine Monitor</string>
    <string name="pref_description_social_recommendations">for Developer Used</string>

    <string name="audio_root_set">Audio Rooting Change</string>
    <string-array name="audio_root_list_titles">
        <item>HDMI</item>
        <item>Other Device</item>
    </string-array>
    <string-array name="audio_root_list_values">
        <item>hdmi</item>
        <item>oaudio</item>
    </string-array>

    <string name="pref_title_gpupower">GPU Performance Control</string>
    <string-array name="pref_gpupower_list_titles">
        <item>Auto</item>
        <item>High</item>
        <item>Low</item>
    </string-array>
    <string-array name="pref_gpupower_list_values">
        <item>auto</item>
        <item>high</item>
        <item>low</item>
    </string-array>

    <string name="pref_title_add_friends_to_messages">Fan Speed Control</string>
    <string-array name="pref_example_list_titles">
        <item>50％</item>
        <item>75％</item>
        <item>100％</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </string-array>

    <string name="pref_title_display">Display Resolution Control</string>
    <string-array name="pref_display_list_titles">
        <item>Default</item>
        <item>3840x2160</item>
        <item>2560x1440</item>
        <item>1920x1080</item>
        <item>1280x720</item>
    </string-array>
    <string-array name="pref_display_list_values">
        <item>defwm</item>
        <item>3840</item>
        <item>2560</item>
        <item>1920</item>
        <item>1280</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
