<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--<EditTextPreference-->
        <!--android:capitalize="words"-->
        <!--android:defaultValue="@string/pref_default_display_name"-->
        <!--android:inputType="textCapWords"-->
        <!--android:key="example_text"-->
        <!--android:maxLines="1"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_title_display_name" />-->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="auto"
        android:entries="@array/pref_gpupower_list_titles"
        android:entryValues="@array/pref_gpupower_list_values"
        android:key="gpupower_set"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_gpupower" />

    <ListPreference
        android:defaultValue="50"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />

    <!--<SwitchPreference-->
        <!--android:defaultValue="false"-->
        <!--android:key="audio_root"-->
        <!--android:title="@string/audio_root_set"-->
        <!--android:summary="@string/audio_root_set_sum" />-->

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/audio_root_list_titles"
        android:entryValues="@array/audio_root_list_values"
        android:key="audio_root"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/audio_root_set" />

    <ListPreference
        android:defaultValue="3840"
        android:entries="@array/pref_display_list_titles"
        android:entryValues="@array/pref_display_list_values"
        android:key="display_set"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_display" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

</PreferenceScreen>
